--- a/about.html
+++ b/about.html
@@ -5,20 +5,19 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.C9qF2vM1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dh_0AxBQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.NQbiHZS4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BHDZ3kkz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.BIbCEQAA.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.xK8oMFd-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CaGSb-jg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D2jV6hxn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.2wivtJPT.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.Ck20bqZ0.js">
+		<link href="./_app/immutable/assets/0.ozrITDFT.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BDAaG-jG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D97ydj3r.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DMq7PE2A.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CN9y6m0z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CeWnLa7b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BO4TIsOI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D7U4Utos.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.GN360lQs.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.7b1_vALk.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">   <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-1ql4366"><a href="."><img class="max-sm:w-36 md:w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div> <div class="md:hidden"><button aria-expanded="false" aria-label="toggle menu" class="svelte-u18hxq"><svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="5" width="80" class="svelte-u18hxq"><path class="top svelte-u18hxq" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"></path><path class="middle svelte-u18hxq" d="m 30,50 h 40"></path><path class="bottom svelte-u18hxq" d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"></path></svg> </button></div>  <div class="flex absolute w-full max-sm:hidden"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1j6q324"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-vilpy2"><a href="./contact">Contact</a></li></ul></div> </div></div> </div>  <main class="min-h-screen"><div class="relative min-h-[45vh] flex items-center justify-center bg-black" data-svelte-h="svelte-98pki1"><img class="object-cover blur-md w-full h-[45vh]" src="./images/partner.png" alt=""> <figure class="absolute flex flex-col items-center justify-center mx-auto"><h1 class="font-extrabold text-white text-center text-6xl">Ihr neuer Partner!</h1> <p class="font-bold text-gray-200 text-center">Moderne Software welche ihr Unternehmen repräsentiert</p> <a href="./contact" class="relative mt-10 btn bg-green-400">Kontaktieren sie uns!</a></figure></div> <div class="flex text-white flex-col-reverse items-center pt-10 bg-black" data-svelte-h="svelte-1y4fc7e"><div class="flex-col w-[40%] md:h-[35rem]"><h1 class="text-5xl pt-20 text-center">Wer sind wir?</h1> <p class="break-word md:break-all mt-8">Wir sind ein junges Unternehmen, welches sich ein Ziel gesetzt hat Software auf einen neuen
+		<div style="display: contents">   <div class=""><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-1ql4366"><a href="."><img class="max-sm:w-36 md:w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div> <div class="md:hidden"><button aria-expanded="false" aria-label="toggle menu" class="svelte-u18hxq"><svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="5" width="80" class="svelte-u18hxq"><path class="top svelte-u18hxq" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"></path><path class="middle svelte-u18hxq" d="m 30,50 h 40"></path><path class="bottom svelte-u18hxq" d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"></path></svg> </button></div>  <div class="flex absolute w-full max-sm:hidden "><div class="ml-auto "><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1j6q324"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-vilpy2"><a href="./contact">Contact</a></li></ul></div> </div></div> </div>  <main class="min-h-screen"><div class="relative min-h-[45vh] flex items-center justify-center bg-black" data-svelte-h="svelte-1b80ds4"><img class="object-cover blur-md w-full h-[45vh]" src="./images/partner.png" alt=""> <figure class="absolute flex flex-col items-center justify-center mx-auto"><h1 class="font-extrabold text-white text-center text-6xl">Ihr neuer Partner!</h1> <p class="font-bold text-gray-200 text-center">Moderne Software welche ihr Unternehmen repräsentiert</p> <a href="./contact" class="relative mt-10 btn bg-green-400">Kontaktieren sie uns!</a></figure></div> <div class="flex text-white flex-col-reverse items-center pt-10 bg-black" data-svelte-h="svelte-1y4fc7e"><div class="flex-col w-[40%] md:h-[35rem]"><h1 class="text-5xl pt-20 text-center">Wer sind wir?</h1> <p class="break-word md:break-all mt-8">Wir sind ein junges Unternehmen, welches sich ein Ziel gesetzt hat Software auf einen neuen
 			Standard zu bringen! Deutschland war und ist für Qualität bekannt in der Industrie, jedoch
 			nicht in der Digitalen Welt. Das Ändern wir! Pünktlich, Perfekt und Wunderschön. Das sind wir
 			und unsere Software.</p></div></div> <div class="flex text-white flex-col-reverse items-center pt-10 bg-black" data-svelte-h="svelte-khofoi"><div class="w-[40%] md:h-[35rem]"><h1 class="text-5xl text-center">Warum sie uns für ihr nächstes Projekt wählen sollten!</h1> <p class="break-word md:break-all mt-8">Durch Mehrjährige Erfahrung in der IT-Branche wissen wir die Schwächen und Umsatzkiller vieler
@@ -28,7 +27,7 @@
 			
 			<script>
 				{
-					__sveltekit_h809iu = {
+					__sveltekit_ymi69o = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -38,8 +37,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dh_0AxBQ.js"),
-						import("./_app/immutable/entry/app.xK8oMFd-.js")
+						import("./_app/immutable/entry/start.BDAaG-jG.js"),
+						import("./_app/immutable/entry/app.CeWnLa7b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
